Add special announcement section and banner to index.html for enhanced visibility

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"></html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="""UTF-8">
+    <meta name="viewport" content="""width=device-width, initial-scale=""1.0">
     <title>Announcements</title>
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -28,6 +28,21 @@
             </ul>
         </nav>
     </header>
+</body>
+</hr>
+<br>
+        <a href="BlizzardCrawl.html" style="text-decoration: none; color: inherit; display: block; border: 3px solid blue; padding: 10px; margin-bottom: 20px; border-radius: 15px; background-color: #f5deb3;">
+            <!-- Banner Image -->
+            <div style="text-align: center; margin-bottom: 20px;">
+                <img src="BlizzardBanner.webp" alt="Banner Image" style="width: 100%; height: auto;">
+            </div>
+        
+            <!-- Highlighted Area -->
+            <div style="background-color: yellow; padding: 20px; border: 2px solid red; border-radius: 15px;">
+                <h1 style="text-align: center;">Special Announcement!</h1>
+                <p style="text-align: center;">Read all about the Rules before the Game! Don't enter the Blizzard unprepared!</p>
+            </div>
+        </a>
 
     <main>
         <section id="map">
