--- a/BlizzardPrepResults.html
+++ b/BlizzardPrepResults.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<p>&nbsp;<img src="BlizzardCrawlResults.webp" alt="" /></p>
+<p>&nbsp;<img src="BlizzardCrawlResults.webp" alt="" style="width: auto; height: auto;"/></p>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
