--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 </body>
 </hr>
 <br>
-        <a href="BlizzardCrawl.html" style="text-decoration: none; color: inherit; display: block; border: 3px solid blue; padding: 10px; margin-bottom: 20px; border-radius: 15px; background-color: #f5deb3;">
-            <!-- Banner Image -->
-            <div style="text-align: center; margin-bottom: 20px;">
-                <img src="BlizzardBanner.webp" alt="Banner Image" style="width: 100%; height: auto;">
-            </div>
-        
-            <!-- Highlighted Area -->
-            <div style="background-color: yellow; padding: 20px; border: 2px solid red; border-radius: 15px;">
-                <h1 style="text-align: center;">Special Announcement!</h1>
-                <p style="text-align: center;">Read all about the Rules before the Game! Don't enter the Blizzard unprepared!</p>
-            </div>
-        </a>
+    <a href="BlizzardCrawl.html" style="text-decoration: none; color: inherit; display: block; border: 3px solid blue; padding: 10px; margin-bottom: 20px; border-radius: 15px; background-color: #f5deb3;">
+        <!-- Banner Image -->
+        <div style="text-align: center; margin-bottom: 20px;">
+            <img src="BlizzardBanner.webp" alt="Banner Image" style="width: auto; height: auto;">
+        </div>
+    
+        <!-- Highlighted Area -->
+        <div style="background-color: yellow; padding: 20px; border: 2px solid red; border-radius: 15px;">
+            <h1 style="text-align: center;">Special Announcement!</h1>
+            <p style="text-align: center;">Read all about the Rules before the Game! Don't enter the Blizzard unprepared!</p>
+        </div>
+    </a>
 
     <main>
         <section id="map">
