Improve image styling across multiple HTML files for better responsiveness and alignment

--- a/BlizzardPrepResults.html
+++ b/BlizzardPrepResults.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<p>&nbsp;<img src="BlizzardCrawlResults.webp" alt="" style="width: auto; height: auto;"/></p>
+<p>&nbsp;<img src="BlizzardCrawlResults.webp" alt="" style="max-width: 100%; height: auto; display: block; margin: 0 auto;"/></p>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
