--- a/BlizzardReference.html
+++ b/BlizzardReference.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<p>&nbsp;<img src="QuickReference.webp" alt="" style="width: auto; height: auto;"/></p>
+<p>&nbsp;<img src="QuickReference.webp" alt="Quick Reference" style="max-width: 100%; height: auto; display: block; margin: 0 auto;"/></p>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blizzard Crawl - Quick Reference Card</title>
