--- a/BlizzardCrawl.html
+++ b/BlizzardCrawl.html
@@ -1,4 +1,4 @@
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><head></head><body><p>&nbsp;<img src="BlizzardCrawl.webp" alt=""style="width: auto; height: auto;"></p>
+<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><head></head><body><p>&nbsp;<img src="BlizzardCrawl.webp" alt="" style="max-width: 100%; height: auto; display: block; margin: 0 auto;"></p>
 
     <title>Blizzard Crawl Mini-Game Rules</title>
 
