--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="BlizzardCrawl.html" style="text-decoration: none; color: inherit; display: block; border: 3px solid blue; padding: 10px; margin-bottom: 20px; border-radius: 15px; background-color: #f5deb3;">
         <!-- Banner Image -->
         <div style="text-align: center; margin-bottom: 20px;">
-            <img src="BlizzardBanner.webp" alt="Banner Image" style="width: auto; height: auto;">
+            <img src="BlizzardBanner.webp" alt="Banner Image" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
         </div>
     
         <!-- Highlighted Area -->
