Add Ice Dragon event to BlizzardCrawl.html and adjust existing Blizzard Surge Patrol entry

--- a/BlizzardCrawl.html
+++ b/BlizzardCrawl.html
@@ -471,8 +471,12 @@ Your preparations earn 8 Blizzard Tokens, a solid foundation but one marked by u
 <td><strong>Icy Mirage</strong>: The snow forms illusions that lead the party astray. Each member makes a <strong>DC 13 Perception check</strong>. If fewer than half succeed, the party <strong>loses 1 Blizzard Token</strong>.</td>
 </tr>
 <tr>
-<td><strong>97–100</strong></td>
+<td><strong>97–99</strong></td>
 <td><strong>Blizzard Surge Patrol</strong>: A horde patrol enhanced by the blizzard strikes. <strong>Avoid</strong>: Stealth (DC 18). Combat: Failure to avoid costs <strong>2 Blizzard Tokens</strong> and forces the party to <strong>fall back one level</strong>.</td>
+</tr>
+<tr>
+<td><strong>97–99</strong></td>
+<td><strong>Ice Dragon Cometh</strong>: <b style="color:blue">Arveiaturace, The White Wyrm</b> decendes on the party.</td>
 </tr>
 </tbody>
 </table>
