Add note about table accuracy in BlizzardCrawl.html for clarity

--- a/BlizzardCrawl.html
+++ b/BlizzardCrawl.html
@@ -599,6 +599,9 @@ Your preparations earn 8 Blizzard Tokens, a solid foundation but one marked by u
 </tr>
 </tbody>
 </table>
+<p style="font-size: 0.8em; color: gray; text-align: center;">
+    Note: The tables provided above are approximations and may have been edited or updated as needed. Please refer to the GM for the most accurate and up-to-date information.
+</p>
 <p>&nbsp;</p>
 <hr>
 <h2><strong>3. Evening Phase: Setting Up Camp and Resting</strong></h2>
