Add Battle Broadcast podcast page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <ul>
             <li><a href="Vellynne.html" class="announcement-link">Vellynne Harpells Journal</a></li>
             <li><a href="Kereptas.html" class="announcement-link">The Tome of Kereptas</a></li>
+            <li><a href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.html" class="announcement-link">Steel &amp; Storms — A Battle Broadcast</a></li>
         </ul>
 
             
