--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#narrative">Narrative Summary</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a href="#appendix">Appendix</a></li>
+                <li><a href="paranoia/index.html">Paranoia</a></li>
             </ul>
         </nav>
     </header>
