Add New Horizons arc and dynamic timeline

--- a/PartOne.html
+++ b/PartOne.html
@@ -9,12 +9,14 @@
 <body>
     <header>
         <h1>The Frostbitten Chronicles of Team Biscuit</h1>
+        <p class="subtitle">New Arc: “New Horizons” — Acheron → Rigus → Brindinford → Windglum (Pandemonium)</p>
         <nav>
             <ul>
                 <li><a href="index.html">Maps</a></li>
                 <li><a href="index.html#narrative">Narrative Summary</a></li>
                 <li><a href="index.html#timeline">Timeline</a></li>
                 <li><a href="index.html#appendix">Appendix</a></li>
+                <li><a href="index.html#new-horizons">New Horizons</a></li>
             </ul>
         </nav>
     </header>
@@ -85,7 +87,7 @@
 </main>
 
     <footer>
-        <p>&copy; 2024 Campaign Chronicles. All Rights Reserved.</p>
+        <p>© Campaign Chronicles. “New Horizons” arc placeholders present — will be filled by GM.</p>
     </footer>
 </body>
 </html>
