Add HTML files for Parts One, Two, and Three of "The Frostbitten Chronicles of Team Biscuit"; update index and timeline links to point to the new archive structure; modify styles for better visibility and remove unused CSS classes.

--- a/Boons.html
+++ b/Boons.html
@@ -1,4 +1,4 @@
-<p><img style="width: 652.733px; height: 813.741px;" src="https://s3.amazonaws.com/files.d20.io/images/365873344/G7K354isnZTwgdKY8E8Hqg/max.jpg?1698900303" /></p>
+<p><img style="width: 652.733px; height: 813.741px;" src="https://s3.amazonaws.com/files.d20.io/images/365873344/G7K354isnZTwgdKY8E8Hqg/max.jpg?1698900303" alt="Epic Boons illustration" /></p>
 <p><strong>&nbsp;</strong></p>
 <blockquote>
 <h1>If a player continues leveling the same class through levels 21 to 49, they gain Epic Boons at levels 21, 25, 29, 31, 35, 39, 41, 45, and 49<br /><br />Players may choose from any Official <a href="https://app.roll20.net/compendium/dnd5e/Other%20Rewards?sharedCompendium=6011383&amp;expansion=7583#h-Epic%20Boons">Epic Boons</a> or choose one from the Custom Epic Boons** below.</h1>
