--- a/timeline/index.html
+++ b/timeline/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Timeline</title>
   <link rel="stylesheet" href="../styles.css"/>
 </head>
@@ -11,7 +12,7 @@
   </header>
   <nav class="container">
     <ul>
-      <li><a href="../PartOne.html">Chapters</a></li>
+      <li><a href="../archive/PartOne.html">Chapters</a></li>
       <li><a href="../timeline/index.html">Timeline</a></li>
       <li><a href="../archive/index.html">Archive</a></li>
     </ul>
@@ -42,5 +43,6 @@
         li.style.color = 'red';
         ul.appendChild(li);
       });
+  </script>
 </body>
 </html>
