Add new HTML files for Paranoia blog and house rules; update index.html for Paranoia with game details and navigation; enhance timeline styles for better visibility.

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Timeline</title>
   <link rel="stylesheet" href="../styles.css"/>
+  <style>
+    /* small helpers, safe if styles.css exists */
+    .container{max-width:960px;margin:0 auto;padding:1.5rem;}
+    header, nav, footer{margin-bottom:1rem;}
+    nav ul{list-style:none;padding:0;display:flex;gap:1rem;flex-wrap:wrap;}
+    nav ul li a{color:#333;} /* Override white text from external CSS for visibility */
+    .muted{opacity:.75}
+  </style>
 </head>
 <body>
   <header class="container">
