Add color commentary section and announcer UI to "Steel & Storms" podcast; create new transcript HTML file and update links in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="muted">Hear the recap as if broadcast from a field tent beside the Red Keep.</p>
         <p>
           <!-- Replace these with your live host URLs when ready -->
-          <a class="btn" href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.mp3">
+          <a class="btn" href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.html">
             ▶️ <strong>Play Latest Episode</strong> (MP3)
           </a>
         </p>
